Daksh re - fix note: doesnt work on mobile due to screen pixel density

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -89,7 +89,7 @@ ul{
 }
 
 
-@media(max-width: 1200px){
+@media(max-width: 750px){
     .footer-col{
     width: 50%;
     margin-bottom: 30px;
